add preprocessing script

--- a/notebooks/modeling/sqft_price_estimate_1.ipynb
+++ b/notebooks/modeling/sqft_price_estimate_1.ipynb
@@ -9,214 +9,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import os,sys\n",
-    "from sqlalchemy import create_engine\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "cwd = os.getcwd()\n",
-    "lib_path = os.path.abspath(os.path.join(cwd, 'lib'))\n",
-    "sys.path.append(lib_path)\n",
-    "from plot_utils import *\n",
-    "\n",
-    "ServerName = \"localhost\"\n",
-    "Database = \"sdra\"\n",
-    "engine = create_engine('postgresql://postgres:@' + ServerName + ':5432/' + Database)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### dataset basics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1449003, 16)\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pin</th>\n",
-       "      <th>year_built</th>\n",
-       "      <th>sqft</th>\n",
-       "      <th>num_bed</th>\n",
-       "      <th>num_bath</th>\n",
-       "      <th>pool</th>\n",
-       "      <th>view</th>\n",
-       "      <th>street</th>\n",
-       "      <th>city</th>\n",
-       "      <th>zip</th>\n",
-       "      <th>sold_price</th>\n",
-       "      <th>date</th>\n",
-       "      <th>sold_age</th>\n",
-       "      <th>sqft_price</th>\n",
-       "      <th>sold_year</th>\n",
-       "      <th>sold_month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5754330300</td>\n",
-       "      <td>1955.0</td>\n",
-       "      <td>1120</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>HILLTOP</td>\n",
-       "      <td>CHULA VISTA</td>\n",
-       "      <td>91911</td>\n",
-       "      <td>447000</td>\n",
-       "      <td>2017-10-24</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>399</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1657014212</td>\n",
-       "      <td>1993.0</td>\n",
-       "      <td>1016</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>GENOA</td>\n",
-       "      <td>OCEANSIDE</td>\n",
-       "      <td>92056</td>\n",
-       "      <td>397000</td>\n",
-       "      <td>2017-10-19</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>390</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5741930100</td>\n",
-       "      <td>1960.0</td>\n",
-       "      <td>1893</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>N</td>\n",
-       "      <td>ROBERT</td>\n",
-       "      <td>CHULA VISTA</td>\n",
-       "      <td>91910</td>\n",
-       "      <td>547000</td>\n",
-       "      <td>2017-09-27</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>288</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          pin  year_built  sqft  num_bed  num_bath  pool  view   street  \\\n",
-       "0  5754330300      1955.0  1120      3.0      15.0     N     N  HILLTOP   \n",
-       "1  1657014212      1993.0  1016      2.0      20.0  None  None    GENOA   \n",
-       "2  5741930100      1960.0  1893      3.0      20.0     Y     N   ROBERT   \n",
-       "\n",
-       "          city    zip  sold_price       date  sold_age  sqft_price  sold_year  \\\n",
-       "0  CHULA VISTA  91911      447000 2017-10-24      62.0         399       2017   \n",
-       "1    OCEANSIDE  92056      397000 2017-10-19      24.0         390       2017   \n",
-       "2  CHULA VISTA  91910      547000 2017-09-27      57.0         288       2017   \n",
-       "\n",
-       "   sold_month  \n",
-       "0          10  \n",
-       "1          10  \n",
-       "2           9  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# all valid transactions of valid property with addresses\n",
-    "sql = '''SELECT * FROM property_estimate'''\n",
-    "df_all = pd.read_sql_query(sql, engine)\n",
-    "df_all['date'] = pd.to_datetime(df_all['date'])\n",
-    "df_all['sold_year'], df_all['sold_month'] = df_all['date'].dt.year, df_all['date'].dt.month\n",
-    "print(df_all.shape)\n",
-    "df_all[:3]"
+    "%load_ext autoreload\n",
+    "# always reload modules marked with \"%aimport\"\n",
+    "%autoreload 1\n",
+    "\n",
+    "import os,sys\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# add the 'src' directory as one where we can import modules\n",
+    "src_dir = os.path.join(os.getcwd(), '../..', 'src')\n",
+    "sys.path.append(src_dir)\n",
+    "\n",
+    "%aimport plot_utils\n",
+    "from plot_utils import *\n",
+    "%aimport preprocessing\n",
+    "from preprocessing import *\n",
+    "%aimport data_source\n",
+    "from data_source import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### more cleaning can be done here\n",
-    "* eg. feature year_built are not clean yet\n",
-    "* filter out sqft_price >= 1000"
+    "### DataSource \n",
+    "* This module loads data from database\n",
+    "* Auto update views by executing database/preprocess.sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1444802, 16)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "connect to database postgresql://postgres:@localhost:5432/sdra\n",
+      "['properties', 'property_features', 'transactions', 'property_addresses', 'property_address_transactions', 'property_estimate']\n",
+      "execute  c:\\wenyan\\dse_capstone\\database\\preprocess.sql\n"
+     ]
     }
    ],
    "source": [
-    "df_all_valid = df_all[(df_all['sqft_price']<1000)\n",
-    "                    &(df_all['year_built'] > 0)\n",
-    "                    ]\n",
-    "df_all_valid.shape"
+    "ds = DataSource(host='localhost',port=5432, username='postgres', password='', database='sdra')\n",
+    "ds.show_views()\n",
+    "ds.update_views()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocess\n",
+    "* This module will deliver the valid dataset with finished features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1512560, 13)\n",
+      "converting view\n",
+      "converting pool\n",
+      "converting date\n",
+      "converting year_built\n",
+      "Index(['num_bath', 'date', 'pool', 'year_built', 'sqft', 'sqft_price',\n",
+      "       'sold_price', 'num_bed', 'view'],\n",
+      "      dtype='object')\n",
+      "converting sold_year\n",
+      "converting sold_age\n",
+      "converting view\n",
+      "converting pool\n",
+      "converting date\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_view = ds.get_view_df('property_estimate')\n",
+    "pp = Preprocess(df_view)\n",
+    "df_all = pp.dataset()\n",
+    "df_all_valid = pp.dataset(feature='delivered', valid=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1512560, 11)\n",
+      "(1446992, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_all.shape)\n",
+    "print(df_all_valid.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dataset for modeling\n",
+    "* suggest to use valid dataset - df_all_valid\n",
+    "* (not suggested) can also try df_all - all data with all features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,16 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(37508, 16)"
+       "(37881, 7)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
