--- a/notebooks/modeling/sqft_price_estimate_1.ipynb
+++ b/notebooks/modeling/sqft_price_estimate_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,38 +82,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1512560, 13)\n",
-      "converting view\n",
-      "converting pool\n",
-      "converting date\n",
-      "converting year_built\n",
-      "Index(['num_bath', 'date', 'pool', 'year_built', 'sqft', 'sqft_price',\n",
-      "       'sold_price', 'num_bed', 'view'],\n",
-      "      dtype='object')\n",
-      "converting sold_year\n",
-      "converting sold_age\n",
-      "converting view\n",
-      "converting pool\n",
-      "converting date\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_view = ds.get_view_df('property_estimate')\n",
-    "pp = Preprocess(df_view)\n",
-    "df_all = pp.dataset()\n",
-    "df_all_valid = pp.dataset(feature='delivered', valid=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -121,14 +89,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1512560, 11)\n",
-      "(1446992, 7)\n"
+      "connect to database postgresql://postgres:@localhost:5432/sdra\n",
+      "['properties', 'property_features', 'transactions', 'property_addresses', 'property_address_transactions', 'property_estimate']\n",
+      "execute  c:\\wenyan\\dse_capstone\\database\\preprocess.sql\n",
+      "(1512560, 16)\n",
+      "(709325, 7)\n"
      ]
     }
    ],
    "source": [
-    "print(df_all.shape)\n",
-    "print(df_all_valid.shape)"
+    "ds = DataSource(host='localhost',port=5432, username='postgres', password='', database='sdra')\n",
+    "ds.show_views()\n",
+    "ds.update_views()\n",
+    "\n",
+    "df_transaction = ds.get_view_df('property_address_transactions')\n",
+    "df_property = ds.get_view_df('property_addresses')\n",
+    "print(df_transaction.shape)\n",
+    "print(df_property.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pp = Preprocess(df_transaction, df_property)"
    ]
   },
   {
@@ -136,60 +124,275 @@
    "metadata": {},
    "source": [
     "### dataset for modeling\n",
-    "* suggest to use valid dataset - df_all_valid\n",
-    "* (not suggested) can also try df_all - all data with all features"
+    "Preprocess.dataset(feature='delivered', valid=True)\n",
+    "* suggest using: feature='delivered', otherwise all features including non-solid features will be included\n",
+    "* suggest using: valid=True, otherwise outliers and invalid feature values will be  included\n",
+    "* date range can be specified"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-10-24 00:00:00\n"
+      "transforming view\n",
+      "transforming pool\n",
+      "transforming date\n",
+      "transforming year_built\n",
+      "transforming sold_year\n",
+      "transforming sold_age\n",
+      "making sqft_zip_avg\n",
+      "making sqft_price_zip_avg\n",
+      "making sold_price_zip_avg\n",
+      "making sale_count_zip\n",
+      "making prop_count_zip\n"
      ]
     }
    ],
    "source": [
-    "# check the date of last transaction\n",
-    "print(df_all_valid['date'].max())"
+    "# records of all years\n",
+    "df_all_valid = pp.dataset(feature='delivered', valid=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "transforming view\n",
+      "transforming pool\n",
+      "transforming date\n",
+      "transforming year_built\n",
+      "transforming sold_year\n",
+      "transforming sold_age\n",
+      "making sqft_zip_avg\n",
+      "making sqft_price_zip_avg\n",
+      "making sold_price_zip_avg\n",
+      "making sale_count_zip\n",
+      "making prop_count_zip\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(37881, 7)"
+       "(37881, 9)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# get only transactions in last one year\n",
-    "df_last_year = df_all_valid[(df_all_valid['date'] >= '2016-10-01') & (df_all_valid['date'] < '2017-10-01')]\n",
-    "df_last_year.shape"
+    "# records of last year\n",
+    "df_last_year_valid = pp.dataset(feature='delivered', valid=True, date=('2016-10-01', '2017-10-01'))\n",
+    "df_last_year_valid.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>view</th>\n",
+       "      <th>sqft_price</th>\n",
+       "      <th>pool</th>\n",
+       "      <th>sqft_price_zip_avg</th>\n",
+       "      <th>sqft</th>\n",
+       "      <th>num_bed</th>\n",
+       "      <th>sold_price_zip_avg</th>\n",
+       "      <th>num_bath</th>\n",
+       "      <th>sqft_zip_avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>243</td>\n",
+       "      <td>0</td>\n",
+       "      <td>257.241848</td>\n",
+       "      <td>3580</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>412059.782609</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1662.940217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>213</td>\n",
+       "      <td>0</td>\n",
+       "      <td>257.241848</td>\n",
+       "      <td>2785</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>412059.782609</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1662.940217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>260</td>\n",
+       "      <td>0</td>\n",
+       "      <td>257.241848</td>\n",
+       "      <td>1822</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>412059.782609</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1662.940217</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   view  sqft_price  pool  sqft_price_zip_avg  sqft  num_bed  \\\n",
+       "0     1         243     0          257.241848  3580      4.0   \n",
+       "1     0         213     0          257.241848  2785      3.0   \n",
+       "2     0         260     0          257.241848  1822      4.0   \n",
+       "\n",
+       "   sold_price_zip_avg  num_bath  sqft_zip_avg  \n",
+       "0       412059.782609       2.0   1662.940217  \n",
+       "1       412059.782609       2.0   1662.940217  \n",
+       "2       412059.782609       2.0   1662.940217  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_last_year_valid[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "transforming view\n",
+      "transforming pool\n",
+      "transforming date\n",
+      "transforming year_built\n",
+      "transforming sold_year\n",
+      "transforming sold_age\n",
+      "making sqft_zip_avg\n",
+      "making sqft_price_zip_avg\n",
+      "making sold_price_zip_avg\n",
+      "making sale_count_zip\n",
+      "making prop_count_zip\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(76689, 9)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# records of last 2 years\n",
+    "df_last_2year_valid = pp.dataset(feature='delivered', valid=True, date=('2015-10-01', '2017-10-01'))\n",
+    "df_last_2year_valid.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "transforming view\n",
+      "transforming pool\n",
+      "transforming date\n",
+      "transforming year_built\n",
+      "transforming sold_year\n",
+      "transforming sold_age\n",
+      "making sqft_zip_avg\n",
+      "making sqft_price_zip_avg\n",
+      "making sold_price_zip_avg\n",
+      "making sale_count_zip\n",
+      "making prop_count_zip\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(111380, 9)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# records of last 3 years\n",
+    "df_last_3year_valid = pp.dataset(feature='delivered', valid=True, date=('2014-10-01', '2017-10-01'))\n",
+    "df_last_3year_valid.shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### regression model \n",
+    "### regression model\n",
     "* target: sqft_price\n",
-    "* features: ...\n",
-    "* data set: last 1 year, 2 years, ...\n",
-    "* try different models"
+    "* try various features combination: ...\n",
+    "* try different dataset size: last 1 year, 2 years, ...\n",
+    "* try different models: LinearRegression, RandomForestRegression, ..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
