--- a/notebooks/modeling/sqft_price_estimate_1.ipynb
+++ b/notebooks/modeling/sqft_price_estimate_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,11 @@
     "%aimport preprocessing\n",
     "from preprocessing import *\n",
     "%aimport data_source\n",
-    "from data_source import *"
+    "from data_source import *\n",
+    "\n",
+    "import logging\n",
+    "from utils import *\n",
+    "set_logger(logging.DEBUG)"
    ]
   },
   {
@@ -53,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "connect to database postgresql://postgres:@localhost:5432/sdra\n",
-      "['properties', 'property_features', 'transactions', 'property_addresses', 'property_address_transactions', 'property_estimate']\n",
-      "execute  c:\\wenyan\\dse_capstone\\database\\preprocess.sql\n"
+      "[dp] connect to database postgresql://postgres:@localhost:5432/sdra\n",
+      "[dp] supported views: ['properties', 'property_features', 'transactions', 'property_addresses', 'property_address_transactions', 'property_transaction_valid']\n",
+      "[dp] execute c:\\wenyan\\dse_capstone\\database\\preprocess.sql\n"
      ]
     }
    ],
@@ -82,26 +86,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "connect to database postgresql://postgres:@localhost:5432/sdra\n",
-      "['properties', 'property_features', 'transactions', 'property_addresses', 'property_address_transactions', 'property_estimate']\n",
-      "execute  c:\\wenyan\\dse_capstone\\database\\preprocess.sql\n",
-      "(1512560, 16)\n",
-      "(709325, 7)\n"
+      "(1512560, 21)\n",
+      "(709325, 18)\n"
      ]
     }
    ],
    "source": [
-    "ds = DataSource(host='localhost',port=5432, username='postgres', password='', database='sdra')\n",
-    "ds.show_views()\n",
-    "ds.update_views()\n",
-    "\n",
     "df_transaction = ds.get_view_df('property_address_transactions')\n",
     "df_property = ds.get_view_df('property_addresses')\n",
     "print(df_transaction.shape)\n",
@@ -110,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -132,24 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "transforming view\n",
-      "transforming pool\n",
-      "transforming date\n",
-      "transforming year_built\n",
-      "transforming sold_year\n",
-      "transforming sold_age\n",
-      "making sqft_zip_avg\n",
-      "making sqft_price_zip_avg\n",
-      "making sold_price_zip_avg\n",
-      "making sale_count_zip\n",
-      "making prop_count_zip\n"
+      "[dp] transforming date\n",
+      "[dp] transforming view\n",
+      "[dp] transforming pool\n",
+      "[dp] transforming impr_over_land\n",
+      "[dp] transforming sold_year\n",
+      "[dp] transforming sold_age\n",
+      "[dp] making sqft_zip_avg\n",
+      "[dp] making sqft_price_zip_avg\n",
+      "[dp] making sold_price_zip_avg\n",
+      "[dp] making sale_count_zip\n",
+      "[dp] making prop_count_zip\n"
      ]
     }
    ],
@@ -160,33 +157,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "transforming view\n",
-      "transforming pool\n",
-      "transforming date\n",
-      "transforming year_built\n",
-      "transforming sold_year\n",
-      "transforming sold_age\n",
-      "making sqft_zip_avg\n",
-      "making sqft_price_zip_avg\n",
-      "making sold_price_zip_avg\n",
-      "making sale_count_zip\n",
-      "making prop_count_zip\n"
+      "[dp] transforming date\n",
+      "[dp] transforming view\n",
+      "[dp] transforming pool\n",
+      "[dp] transforming impr_over_land\n",
+      "[dp] transforming sold_year\n",
+      "[dp] transforming sold_age\n",
+      "[dp] making sqft_zip_avg\n",
+      "[dp] making sqft_price_zip_avg\n",
+      "[dp] making sold_price_zip_avg\n",
+      "[dp] making sale_count_zip\n",
+      "[dp] making prop_count_zip\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(37881, 9)"
+       "(37630, 11)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -223,71 +220,79 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>view</th>\n",
-       "      <th>sqft_price</th>\n",
-       "      <th>pool</th>\n",
        "      <th>sqft_price_zip_avg</th>\n",
+       "      <th>impr_over_land</th>\n",
+       "      <th>sqft_zip_avg</th>\n",
+       "      <th>sold_price</th>\n",
+       "      <th>date</th>\n",
+       "      <th>num_bath</th>\n",
+       "      <th>sold_price_zip_avg</th>\n",
+       "      <th>pool</th>\n",
        "      <th>sqft</th>\n",
        "      <th>num_bed</th>\n",
-       "      <th>sold_price_zip_avg</th>\n",
-       "      <th>num_bath</th>\n",
-       "      <th>sqft_zip_avg</th>\n",
+       "      <th>view</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>243</td>\n",
-       "      <td>0</td>\n",
-       "      <td>257.241848</td>\n",
-       "      <td>3580</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>412059.782609</td>\n",
+       "      <td>333.554978</td>\n",
+       "      <td>2.004593</td>\n",
+       "      <td>2610.605195</td>\n",
+       "      <td>717000</td>\n",
+       "      <td>2017-09-27</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1662.940217</td>\n",
+       "      <td>864917.316017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2112</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>213</td>\n",
-       "      <td>0</td>\n",
-       "      <td>257.241848</td>\n",
-       "      <td>2785</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>412059.782609</td>\n",
+       "      <td>333.554978</td>\n",
+       "      <td>0.313287</td>\n",
+       "      <td>2610.605195</td>\n",
+       "      <td>673000</td>\n",
+       "      <td>2017-09-27</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1662.940217</td>\n",
+       "      <td>864917.316017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1419</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>260</td>\n",
-       "      <td>0</td>\n",
-       "      <td>257.241848</td>\n",
-       "      <td>1822</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>412059.782609</td>\n",
+       "      <td>333.554978</td>\n",
+       "      <td>2.445162</td>\n",
+       "      <td>2610.605195</td>\n",
+       "      <td>720000</td>\n",
+       "      <td>2017-09-25</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1662.940217</td>\n",
+       "      <td>864917.316017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1819</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   view  sqft_price  pool  sqft_price_zip_avg  sqft  num_bed  \\\n",
-       "0     1         243     0          257.241848  3580      4.0   \n",
-       "1     0         213     0          257.241848  2785      3.0   \n",
-       "2     0         260     0          257.241848  1822      4.0   \n",
+       "   sqft_price_zip_avg  impr_over_land  sqft_zip_avg  sold_price       date  \\\n",
+       "0          333.554978        2.004593   2610.605195      717000 2017-09-27   \n",
+       "1          333.554978        0.313287   2610.605195      673000 2017-09-27   \n",
+       "2          333.554978        2.445162   2610.605195      720000 2017-09-25   \n",
        "\n",
-       "   sold_price_zip_avg  num_bath  sqft_zip_avg  \n",
-       "0       412059.782609       2.0   1662.940217  \n",
-       "1       412059.782609       2.0   1662.940217  \n",
-       "2       412059.782609       2.0   1662.940217  "
+       "   num_bath  sold_price_zip_avg  pool  sqft  num_bed  view  \n",
+       "0       2.0       864917.316017     0  2112      4.0     0  \n",
+       "1       2.0       864917.316017     0  1419      3.0     0  \n",
+       "2       2.0       864917.316017     0  1819      3.0     0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
