add feature lon/lat

--- a/notebooks/feature_engineer/feature_engineer-bracket.ipynb
+++ b/notebooks/feature_engineer/feature_engineer-bracket.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -119,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "features = set(pp.get_feature_list('all')) - set(['date', 'street', 'zip', 'sold_year', 'sqft_price']) # exclude features not suitable\n",
@@ -202,7 +206,7 @@
    ],
    "source": [
     "df_corr_all = pd.DataFrame(corrs).set_index(['year'])\n",
-    "plot_trends(df_corr_all, features, 'correlation trends')"
+    "plot_trends(df_corr_all, features, title='correlation trends')"
    ]
   },
   {
