--- a/notebooks/modeling/baseline.ipynb
+++ b/notebooks/modeling/baseline.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### non-time-series validation\n",
+    "* train/test 2-8 split with random sampling\n",
+    "* cross validation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -321,18 +330,6 @@
    ],
    "source": [
     "df_last_year_valid.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X = df_last_year_valid[use_features]\n",
-    "y = np.ravel(df_last_year_valid['sold_price'])"
    ]
   },
   {
@@ -1104,7 +1101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
