sort modeling notebooks

--- a/notebooks/modeling/clean_clustering.ipynb
+++ b/notebooks/modeling/clean_clustering.ipynb
@@ -2931,7 +2931,7 @@
     "errors = measure_segments(['sold_price'], cluster_range)\n",
     "\n",
     "plt.figure()\n",
-    "plt.title('clustering on evaluation')\n",
+    "plt.title('clustering on sold price')\n",
     "plt.plot(cluster_range, errors)\n",
     "plt.show()"
    ]
