--- a/notebooks/modeling/clean_segment.ipynb
+++ b/notebooks/modeling/clean_segment.ipynb
@@ -71,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "[dp] connect to database postgresql://postgres:@localhost:5432/sdra\n",
-      "[dp] supported views: ['properties', 'property_features', 'transactions', 'property_addresses', 'property_address_transactions', 'property_transaction_valid']\n"
+      "[dp] supported views: ['properties', 'property_features', 'transactions', 'property_addresses', 'property_address_transactions', 'property_transaction_valid', 'property_address_school_transactions']\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1512560, 25)\n",
+      "(1475109, 25)\n",
       "(709325, 22)\n"
      ]
     }
@@ -135,6 +135,7 @@
       "[dp] transforming impr_over_land\n",
       "[dp] transforming sold_year\n",
       "[dp] transforming sold_age\n",
+      "[dp] transforming eval\n",
       "[dp] making sqft_zip_avg\n",
       "[dp] making sqft_price_zip_avg\n",
       "[dp] making sold_price_zip_avg\n",
@@ -150,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "(67220, 15)"
+       "(67218, 14)"
       ]
      },
      "execution_count": 8,
@@ -192,139 +193,133 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>sqft_price_zip_avg</th>\n",
        "      <th>sqft_zip_avg</th>\n",
-       "      <th>view</th>\n",
+       "      <th>num_bed</th>\n",
+       "      <th>num_bath</th>\n",
+       "      <th>sqft_price_zip_avg</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>sqft</th>\n",
+       "      <th>pool</th>\n",
        "      <th>sold_price_zip_avg</th>\n",
        "      <th>lat</th>\n",
-       "      <th>sold_price</th>\n",
-       "      <th>num_bath</th>\n",
+       "      <th>view</th>\n",
        "      <th>impr_over_land</th>\n",
-       "      <th>sqft</th>\n",
-       "      <th>zip</th>\n",
-       "      <th>pool</th>\n",
-       "      <th>num_bed</th>\n",
-       "      <th>lon</th>\n",
+       "      <th>id</th>\n",
        "      <th>date</th>\n",
+       "      <th>sold_price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1428580</td>\n",
-       "      <td>334.725439</td>\n",
-       "      <td>2162.542982</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6.980461e+05</td>\n",
-       "      <td>32.93745</td>\n",
-       "      <td>346500</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.015708</td>\n",
-       "      <td>1064</td>\n",
-       "      <td>92131</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-117.10164</td>\n",
-       "      <td>2015-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67248</th>\n",
-       "      <td>1428701</td>\n",
-       "      <td>632.922607</td>\n",
-       "      <td>1790.413442</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.139647e+06</td>\n",
-       "      <td>32.98165</td>\n",
-       "      <td>875000</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.388889</td>\n",
-       "      <td>2028</td>\n",
-       "      <td>92075</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-117.26182</td>\n",
-       "      <td>2015-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66125</th>\n",
-       "      <td>1428697</td>\n",
-       "      <td>297.193232</td>\n",
-       "      <td>1346.097061</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.866585e+05</td>\n",
-       "      <td>32.75832</td>\n",
-       "      <td>533000</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.050000</td>\n",
-       "      <td>1489</td>\n",
-       "      <td>91942</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>-117.05020</td>\n",
-       "      <td>2015-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16167</th>\n",
-       "      <td>1428591</td>\n",
-       "      <td>244.308804</td>\n",
-       "      <td>1732.148489</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.080959e+05</td>\n",
-       "      <td>33.18110</td>\n",
-       "      <td>358000</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.824996</td>\n",
-       "      <td>1224</td>\n",
-       "      <td>92083</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-117.22416</td>\n",
-       "      <td>2015-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16168</th>\n",
-       "      <td>1428635</td>\n",
-       "      <td>244.308804</td>\n",
-       "      <td>1732.148489</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.080959e+05</td>\n",
-       "      <td>33.21668</td>\n",
-       "      <td>253000</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1678.766257</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.133371</td>\n",
-       "      <td>968</td>\n",
-       "      <td>92083</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-117.25223</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>264.264499</td>\n",
+       "      <td>-116.96671</td>\n",
+       "      <td>732</td>\n",
+       "      <td>0</td>\n",
+       "      <td>429138.400703</td>\n",
+       "      <td>32.79673</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.250028</td>\n",
+       "      <td>1392761</td>\n",
        "      <td>2015-10-01</td>\n",
+       "      <td>158500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61301</th>\n",
+       "      <td>1347.417122</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>391.174863</td>\n",
+       "      <td>-117.20440</td>\n",
+       "      <td>914</td>\n",
+       "      <td>0</td>\n",
+       "      <td>516158.925319</td>\n",
+       "      <td>32.85025</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.400006</td>\n",
+       "      <td>1392788</td>\n",
+       "      <td>2015-10-01</td>\n",
+       "      <td>318000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9718</th>\n",
+       "      <td>2648.682358</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>324.592027</td>\n",
+       "      <td>-117.11695</td>\n",
+       "      <td>1410</td>\n",
+       "      <td>0</td>\n",
+       "      <td>858583.757422</td>\n",
+       "      <td>33.01318</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>1392721</td>\n",
+       "      <td>2015-10-01</td>\n",
+       "      <td>595000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9719</th>\n",
+       "      <td>2648.682358</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>324.592027</td>\n",
+       "      <td>-117.11401</td>\n",
+       "      <td>2752</td>\n",
+       "      <td>0</td>\n",
+       "      <td>858583.757422</td>\n",
+       "      <td>33.03887</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.948663</td>\n",
+       "      <td>1392758</td>\n",
+       "      <td>2015-10-01</td>\n",
+       "      <td>848000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60075</th>\n",
+       "      <td>1895.782219</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>251.726754</td>\n",
+       "      <td>-116.95625</td>\n",
+       "      <td>1725</td>\n",
+       "      <td>0</td>\n",
+       "      <td>462969.412724</td>\n",
+       "      <td>32.61862</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.424379</td>\n",
+       "      <td>1392786</td>\n",
+       "      <td>2015-10-01</td>\n",
+       "      <td>415000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            id  sqft_price_zip_avg  sqft_zip_avg  view  sold_price_zip_avg  \\\n",
-       "0      1428580          334.725439   2162.542982     0        6.980461e+05   \n",
-       "67248  1428701          632.922607   1790.413442     0        1.139647e+06   \n",
-       "66125  1428697          297.193232   1346.097061     0        3.866585e+05   \n",
-       "16167  1428591          244.308804   1732.148489     0        4.080959e+05   \n",
-       "16168  1428635          244.308804   1732.148489     0        4.080959e+05   \n",
+       "       sqft_zip_avg  num_bed  num_bath  sqft_price_zip_avg        lon  sqft  \\\n",
+       "1       1678.766257      1.0       1.0          264.264499 -116.96671   732   \n",
+       "61301   1347.417122      1.0       1.0          391.174863 -117.20440   914   \n",
+       "9718    2648.682358      3.0       2.0          324.592027 -117.11695  1410   \n",
+       "9719    2648.682358      4.0       2.0          324.592027 -117.11401  2752   \n",
+       "60075   1895.782219      3.0       3.0          251.726754 -116.95625  1725   \n",
        "\n",
-       "            lat  sold_price  num_bath  impr_over_land  sqft    zip  pool  \\\n",
-       "0      32.93745      346500       2.0        1.015708  1064  92131     0   \n",
-       "67248  32.98165      875000       2.0        0.388889  2028  92075     0   \n",
-       "66125  32.75832      533000       3.0        1.050000  1489  91942     0   \n",
-       "16167  33.18110      358000       2.0        0.824996  1224  92083     0   \n",
-       "16168  33.21668      253000       1.0        1.133371   968  92083     1   \n",
+       "       pool  sold_price_zip_avg       lat  view  impr_over_land       id  \\\n",
+       "1         0       429138.400703  32.79673     0        1.250028  1392761   \n",
+       "61301     0       516158.925319  32.85025     0        0.400006  1392788   \n",
+       "9718      0       858583.757422  33.01318     0        0.700000  1392721   \n",
+       "9719      0       858583.757422  33.03887     0        0.948663  1392758   \n",
+       "60075     0       462969.412724  32.61862     0        1.424379  1392786   \n",
        "\n",
-       "       num_bed        lon       date  \n",
-       "0          2.0 -117.10164 2015-10-01  \n",
-       "67248      2.0 -117.26182 2015-10-01  \n",
-       "66125      4.0 -117.05020 2015-10-01  \n",
-       "16167      3.0 -117.22416 2015-10-01  \n",
-       "16168      3.0 -117.25223 2015-10-01  "
+       "            date  sold_price  \n",
+       "1     2015-10-01      158500  \n",
+       "61301 2015-10-01      318000  \n",
+       "9718  2015-10-01      595000  \n",
+       "9719  2015-10-01      848000  \n",
+       "60075 2015-10-01      415000  "
       ]
      },
      "execution_count": 9,
