--- a/notebooks/working/feature_selection.ipynb
+++ b/notebooks/working/feature_selection.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -799,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
